cititechdNew2024Jan/force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Payment child object associated to Order.</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Salesforce Payment Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>