cititechdNew2024Jan/force-app/main/default/objects/Payment__c/fields/Applying_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Applying_Transaction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Payment Field label from Netsuite</inlineHelpText>
    <label>Applying Transaction</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>