cititechdNew2024Jan/force-app/main/default/objects/Payment__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legal_Entity</valueSetName>
    </valueSet>
</CustomField>