cititechdNew2024Jan/force-app/main/default/objects/Payment__c/fields/Netsuite_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Payment_Number__c</fullName>
    <formula>Invoice__r.Netsuite_Payment_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Netsuite Payment Number</label>
    <type>Text</type>
</CustomField>