cititechdNew2024Jan/force-app/main/default/objects/Payment__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <inlineHelpText>This field is used for the Order Payment Balance</inlineHelpText>
    <label>Payment Amount - Local Currency</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>