cititechdNew2024Jan/force-app/main/default/objects/Payment__c/fields/Payment_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount_USD__c</fullName>
    <inlineHelpText>USD Currency Only</inlineHelpText>
    <label>Payment Amount - USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>