cititechdNew2024Jan/force-app/main/default/objects/Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order__c</columns>
    <columns>Invoice__c</columns>
    <columns>NAME</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment_Amount__c</columns>
    <columns>Applying_Transaction__c</columns>
    <columns>Payment_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>